[project]
name = "openai-agents-pg-session"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "roman-collinge", email = "romancollinge@outlook.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
openai-agents-pg-session = "openai_agents_pg_session:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
