[project]
name = "openai-agents-pg-session"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "roman-collinge", email = "romancollinge@outlook.com" }
]
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "openai-agents>=0.6.1",
    "sqlalchemy[asyncio]>=2.0.44",
]

[project.scripts]
openai-agents-pg-session = "openai_agents_pg_session:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.7",
]
