[project]
name = "openai-agents-pg-session"
version = "0.1.0"
description = "PostgreSQL-Backed Session implementation for the OpenAI Agents SDK"
readme = "README.md"
authors = [
    { name = "roman-collinge", email = "romancollinge@outlook.com" }
]
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "openai-agents>=0.6.1",
    "sqlalchemy[asyncio]>=2.0.44",
]

[project.scripts]
openai-agents-pg-session = "openai_agents_pg_session:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
strict = false
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = ["tests/"]
plugins = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.pytest.ini_options.markers]
asyncio = "mark a test as async"
